--- a/index.html
+++ b/index.html
@@ -130,6 +130,15 @@
               <div class="col sombrancelha display-block">
                 <img src="img/elemento/sombrancelha01.svg" class="element-craft" data-element="sombrancelha" data-id="01"/>
               </div>
+              <div class="col sombrancelha display-block">
+                <img src="img/elemento/sombrancelha02.svg" class="element-craft" data-element="sombrancelha" data-id="02"/>
+              </div>
+              <div class="col sombrancelha display-block">
+                <img src="img/elemento/sombrancelha03.svg" class="element-craft" data-element="sombrancelha" data-id="03"/>
+              </div>
+              <div class="col sombrancelha display-block">
+                <img src="img/elemento/sombrancelha04.svg" class="element-craft" data-element="sombrancelha" data-id="04"/>
+              </div>
               <div class="col olho display-none">
                 <img src="img/elemento/olho01.svg" class="element-craft" data-element="olho" data-id="01"/>
               </div>
@@ -145,8 +154,26 @@
               <div class="col nariz display-none">
                 <img src="img/elemento/nariz01.svg" class="element-craft" data-element="nariz" data-id="01"/>
               </div>
+              <div class="col nariz display-none">
+                <img src="img/elemento/nariz02.svg" class="element-craft" data-element="nariz" data-id="02"/>
+              </div>
+              <div class="col nariz display-none">
+                <img src="img/elemento/nariz03.svg" class="element-craft" data-element="nariz" data-id="03"/>
+              </div>
+              <div class="col nariz display-none">
+                <img src="img/elemento/nariz04.svg" class="element-craft" data-element="nariz" data-id="04"/>
+              </div>
               <div class="col boca display-none">
                 <img src="img/elemento/boca01.svg" class="element-craft" data-element="boca" data-id="01"/>
+              </div>
+              <div class="col boca display-none">
+                <img src="img/elemento/boca02.svg" class="element-craft" data-element="boca" data-id="02"/>
+              </div>
+              <div class="col boca display-none">
+                <img src="img/elemento/boca03.svg" class="element-craft" data-element="boca" data-id="03"/>
+              </div>
+              <div class="col boca display-none">
+                <img src="img/elemento/boca04.svg" class="element-craft" data-element="boca" data-id="04"/>
               </div>
             </div>
           </div>
