--- a/index.html
+++ b/index.html
@@ -95,25 +95,25 @@
             <div class="row" style="padding: 2%; text-align: center">
               <div class="col" onclick="selectMenuElement('sombrancelha')">
                 <img
-                  src="img/icone/ico-sobrancelha.png"
+                  src="img/icone/ico-sobrancelha.svg"
                   style="width: 32px; height: 32px"
                 />
               </div>
               <div class="col" onclick="selectMenuElement('olho')">
                 <img
-                  src="img/icone/ico-olho.png"
+                  src="img/icone/ico-olho.svg"
                   style="width: 32px; height: 32px"
                 />
               </div>
               <div class="col" onclick="selectMenuElement('nariz')">
                 <img
-                  src="img/icone/ico-nariz.png"
+                  src="img/icone/ico-nariz.svg"
                   style="width: 32px; height: 32px"
                 />
               </div>
               <div class="col" onclick="selectMenuElement('boca')">
                 <img
-                  src="img/icone/ico-boca.png"
+                  src="img/icone/ico-boca.svg"
                   style="width: 32px; height: 32px"
                 />
               </div>
