--- a/creativity.html
+++ b/creativity.html
@@ -9,6 +9,14 @@
 
     <meta itemprop="name" content="Craft Maker" />
     <meta itemprop="description" content="Craft Maker - Criador de Papercraft personalizado - UFC - SMD - Projeto Integrado 2 - 2020.2" />
+    <meta itemprop="image" content="assets/img/craftmakr-logo.svg" />
+    
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="128x128" href="assets/img/craftmakr-logo.svg" />
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/img/craftmakr-logo.svg" />
+    <link rel="apple-touch-icon" sizes="192x192" href="assets/img/craftmakr-logo.svg" />
+
+    <meta name="theme-color" content="#febc2f" />
 
     <title>Craft Maker: Create</title>
     <link rel="icon" href="assets/img/favicon.svg">
@@ -19,14 +27,14 @@
 </head>
 <body>
     <div class="container">
-        <nav class="navbar fixed-top navbar-primary">
+        <nav class="navbar navbar-primary">
             <div class="container-fluid">
-                <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="true" aria-label="Toggle navigation">
+                <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent">
                     <i class="bi bi-list"></i>
                 </button>
-                <div class="collapse navbar-collapse bg-light" id="navbarContent">
+                <div class="collapse fixed-top navbar-collapse bg-light" id="navbarContent">
                     <ul class="navbar-nav">
-                        <li class="nav-item nav-item-first"><a class="nav-link"></a></li>
+                        <li class="nav-item nav-item-first" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent"><a class="nav-link text-light float-end"><i class="bi bi-x me-5 fs-4"></i></a></li>
                         <li class="nav-item"><a class="nav-link" href="index.html"><i class="bi bi-house-fill"></i> Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="creativity.html"><i class="bi bi-emoji-heart-eyes"></i> Criar Meu Craft</a></li>
 
@@ -36,12 +44,15 @@
                         <li class="nav-item"><a class="nav-link" href="myCrafts.html"><i class="bi bi-images"></i> Meus Crafts</a></li>
                         <li class="nav-item"><a class="nav-link"><i class="bi bi-door-open-fill"></i> Sair</a></li>
                     </ul>
+                    <div style="height: 100vh; width: 100%;" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent">
+
+                    </div>
                 </div>
             </div>
         </nav>
         <div class="row">
             <section class="col-md-6 col-sm-12">
-                <div class="mt-5 box-canvas">
+                <div class="box-canvas">
                     <canvas id="canva-craft" width="auto"></canvas>
                 </div>
             </section>
