--- a/creativity.html
+++ b/creativity.html
@@ -1,92 +1,182 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta name="keywords" content="ufc, papercraft, face maker" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="UFC - SMD - Projeto Integrado 2 - 2020.2" />
-    <meta name="description" content="Craft Maker - Criador de Papercraft personalizado" />
+    <meta
+      name="description"
+      content="Craft Maker - Criador de Papercraft personalizado"
+    />
+    <meta name="image" content="assets/img/craftmakr-logo.svg" />
 
     <meta itemprop="name" content="Craft Maker" />
-    <meta itemprop="description" content="Craft Maker - Criador de Papercraft personalizado - UFC - SMD - Projeto Integrado 2 - 2020.2" />
+    <meta
+      itemprop="description"
+      content="Craft Maker - Criador de Papercraft personalizado - UFC - SMD - Projeto Integrado 2 - 2020.2"
+    />
     <meta itemprop="image" content="assets/img/craftmakr-logo.svg" />
-    
+
     <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon.svg" />
-    <link rel="apple-touch-icon" sizes="128x128" href="assets/img/craftmakr-logo.svg" />
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/img/craftmakr-logo.svg" />
-    <link rel="apple-touch-icon" sizes="192x192" href="assets/img/craftmakr-logo.svg" />
+    <link
+      rel="apple-touch-icon"
+      sizes="128x128"
+      href="assets/img/craftmakr-logo.svg"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="assets/img/craftmakr-logo.svg"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="192x192"
+      href="assets/img/craftmakr-logo.svg"
+    />
 
     <meta name="theme-color" content="#febc2f" />
 
     <title>Craft Maker: Create</title>
-    <link rel="icon" href="assets/img/favicon.svg">
+    <link rel="icon" href="assets/img/favicon.svg" />
 
-    <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/vendor/bootstrap-icons/bootstrap-icons.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="assets/vendor/bootstrap/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
     <div class="container">
-        <nav class="navbar navbar-primary">
-            <div class="container-fluid">
-                <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent">
-                    <i class="bi bi-list"></i>
-                </button>
-                <div class="collapse fixed-top navbar-collapse bg-light" id="navbarContent">
-                    <ul class="navbar-nav">
-                        <li class="nav-item nav-item-first" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent"><a class="nav-link text-light float-end"><i class="bi bi-x me-5 fs-4"></i></a></li>
-                        <li class="nav-item"><a class="nav-link" href="index.html"><i class="bi bi-house-fill"></i> Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="creativity.html"><i class="bi bi-emoji-heart-eyes"></i> Criar Meu Craft</a></li>
+      <nav class="navbar navbar-primary">
+        <div class="container-fluid">
+          <button
+            class="navbar-toggler ms-auto"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarContent"
+            aria-controls="navbarContent"
+          >
+            <i class="bi bi-list"></i>
+          </button>
+          <div
+            class="collapse fixed-top navbar-collapse bg-light"
+            id="navbarContent"
+          >
+            <ul class="navbar-nav">
+              <li
+                class="nav-item nav-item-first"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarContent"
+                aria-controls="navbarContent"
+              >
+                <a class="nav-link text-light float-end"
+                  ><i class="bi bi-x me-5 fs-4"></i
+                ></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html"
+                  ><i class="bi bi-house-fill"></i> Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="creativity.html"
+                  ><i class="bi bi-emoji-heart-eyes"></i> Criar Meu Craft</a
+                >
+              </li>
 
-                        <li class="nav-item"><a class="nav-link" href="register.html"><i class="bi bi-journal-plus"></i> Cadastrar</a></li>
-                        <li class="nav-item"><a class="nav-link" href="login.html"><i class="bi bi-key-fill"></i> Logar</a></li>
+              <li class="nav-item">
+                <a class="nav-link" href="register.html"
+                  ><i class="bi bi-journal-plus"></i> Cadastrar</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="login.html"
+                  ><i class="bi bi-key-fill"></i> Logar</a
+                >
+              </li>
 
-                        <li class="nav-item"><a class="nav-link" href="myCrafts.html"><i class="bi bi-images"></i> Meus Crafts</a></li>
-                        <li class="nav-item"><a class="nav-link"><i class="bi bi-door-open-fill"></i> Sair</a></li>
-                    </ul>
-                    <div style="height: 100vh; width: 100%;" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent">
-
-                    </div>
-                </div>
-            </div>
-        </nav>
-        <div class="row">
-            <section class="col-md-6 col-sm-12">
-                <button class="btn donwload-button"><i class="bi bi-download"></i></button>
-                <div class="box-canvas">
-                    <svg id="svg-craft"></svg>
-                </div>
-            </section>
-            <section class="col-md-6 col-sm-12">
-                <div class="row">
-                    <section class="col-12">
-                        <div class="row menu-create">
-                            <div class="col menu-item" onclick="selectMenuElement('cabelo', this)">
-                                <img src="assets/img/ico/ico-cabelo.svg" />
-                            </div>
-                            <div class="col menu-item menu-active" onclick="selectMenuElement('sombrancelha', this)">
-                                <img src="assets/img/ico/ico-sobrancelha.svg" />
-                            </div>
-                            <div class="col menu-item" onclick="selectMenuElement('olho', this)">
-                                <img src="assets/img/ico/ico-olho.svg" />
-                            </div>
-                            <div class="col menu-item" onclick="selectMenuElement('nariz', this)">
-                                <img src="assets/img/ico/ico-nariz.svg" />
-                            </div>
-                            <div class="col menu-item" onclick="selectMenuElement('boca', this)">
-                                <img src="assets/img/ico/ico-boca.svg" />
-                            </div>
-                        </div>
-                    </section>
-                    <section class="col-12">
-                        <div class="row box-elements" id="content-elements"></div>
-                    </section>
-                </div>
-            </section>
+              <li class="nav-item">
+                <a class="nav-link" href="myCrafts.html"
+                  ><i class="bi bi-images"></i> Meus Crafts</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link"
+                  ><i class="bi bi-door-open-fill"></i> Sair</a
+                >
+              </li>
+            </ul>
+            <div
+              style="height: 100vh; width: 100%"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarContent"
+              aria-controls="navbarContent"
+            ></div>
+          </div>
         </div>
+      </nav>
+      <div class="row">
+        <section class="col-md-6 col-sm-12 section-canvas">
+          <button class="btn check-button float-start">
+            <i class="bi bi-check2-square"></i>
+          </button>
+          <button class="btn x-button float-end">
+            <i class="bi bi-x-square"></i>
+          </button>
+          <div class="box-canvas">
+            <svg id="svg-craft"></svg>
+          </div>
+        </section>
+        <section class="col-md-6 col-sm-12">
+          <div class="row">
+            <section class="col-12">
+              <div class="row menu-create">
+                <div
+                  class="col menu-item"
+                  onclick="selectMenuElement('cabelo', this)"
+                >
+                  <img src="assets/img/ico/ico-cabelo.svg" />
+                </div>
+                <div
+                  class="col menu-item menu-active"
+                  onclick="selectMenuElement('sombrancelha', this)"
+                >
+                  <img src="assets/img/ico/ico-sobrancelha.svg" />
+                </div>
+                <div
+                  class="col menu-item"
+                  onclick="selectMenuElement('olho', this)"
+                >
+                  <img src="assets/img/ico/ico-olho.svg" />
+                </div>
+                <div
+                  class="col menu-item"
+                  onclick="selectMenuElement('nariz', this)"
+                >
+                  <img src="assets/img/ico/ico-nariz.svg" />
+                </div>
+                <div
+                  class="col menu-item"
+                  onclick="selectMenuElement('boca', this)"
+                >
+                  <img src="assets/img/ico/ico-boca.svg" />
+                </div>
+              </div>
+            </section>
+            <section class="col-12">
+              <div class="row box-elements" id="content-elements"></div>
+            </section>
+          </div>
+        </section>
+      </div>
     </div>
 
     <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/script.js"></script>
-</body>
+    <script src="assets/js/creativity.js"></script>
+  </body>
 </html>
