--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <section class="d-flex flex-column align-items-center">
             <h1>Apresentação</h1>
             <p class="text-justify">
-                Este personalizador de papercraft permite que você seja ao memo tempo criador e criatura. Tranaforme-se ou transforme quem você quiser em uma eaculturaeacultura de papel pronta para enfeitar sua eastante ou presentear que você mais ama.
+                Este personalizador de papercraft permite que você seja ao mesmo tempo criador e criatura. Transforme-se ou transforme quem você quiser em uma escultura de papel pronta para enfeitar sua estante ou presentear quem você mais ama.
             </p>
         </section>
         <section class="d-flex flex-column align-items-center">
