--- a/print.html
+++ b/print.html
@@ -122,7 +122,8 @@
       <div class="row">
         <section class="col-md-6 col-sm-12">
           <div class="box-canvas-print" id="box-canvas-print">
-            <svg id="svg-craft"></svg>
+            <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+            <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" id="svg-craft"></svg>
           </div>
         </section>
         <section class="col-md-6 col-sm-12">
