--- a/print.html
+++ b/print.html
@@ -122,7 +122,7 @@
       <div class="row">
         <section class="col-md-6 col-sm-12">
           <div class="box-canvas-print" id="box-canvas-print">
-            <svg id="svg-craft"></svg>
+            <img id="svg-craft" />
           </div>
         </section>
         <section class="col-md-6 col-sm-12">
