--- a/index.html
+++ b/index.html
@@ -53,8 +53,12 @@
     <div class="container">
       <nav class="navbar navbar-primary">
         <div class="container-fluid">
+          <div class="ms-auto">
+          <a class="text-decoration-none text-reset" href="login.html">
+            LOGIN
+          </a>
           <button
-            class="navbar-toggler ms-auto"
+            class="navbar-toggler "
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarContent"
@@ -62,6 +66,7 @@
           >
             <i class="bi bi-list"></i>
           </button>
+          </div>
           <div
             class="collapse fixed-top navbar-collapse bg-light"
             id="navbarContent"
