--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <nav class="navbar navbar-primary">
         <div class="container-fluid">
           <div class="ms-auto">
-          <a class="text-decoration-none text-reset" href="login.html">
+          <a class="text-decoration-none text-reset" href="login.html" id="indexLogin">
             LOGIN
           </a>
           <button
