new layout form login and register

--- a/myCrafts.html
+++ b/myCrafts.html
@@ -96,8 +96,8 @@
         </div>
       </nav>
         <section class="text-center">
-            <h1>Crafts De <span id="name-user"></span></h1>
-            <div id="myCraft"></div>
+            <h1>Crafts de <span id="name-user"></span></h1>
+            <div id="myCraft" class="row"></div>
         </section>
     </div>
 
